--- a/resume.html
+++ b/resume.html
@@ -218,7 +218,7 @@
 
     <!-- Professional Summary -->
     <div class="section">
-        <div class="section-title">Professional Summary</div>
+        <div class="section-title">Summary</div>
         <div id="bio" style="text-align: justify;">
             Loading...
         </div>
@@ -226,7 +226,7 @@
 
     <!-- Professional Experience -->
     <div class="section">
-        <div class="section-title">Professional Experience</div>
+        <div class="section-title">Experience</div>
         <div id="experience-list">
             <!-- Experience items will be loaded here -->
         </div>
