--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
                 <!-- Experience Section -->
                 <div id="experience" class="section">
-                    <h2 class="section-title">Professional Experience</h2>
+                    <h2 class="section-title">Experience</h2>
                     <div id="experience-list">
                         <!-- Experience items will be loaded here -->
                     </div>
